--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -77,17 +77,20 @@ textarea{
     max-width:66vw;
 }
 
-.successMessage{
-    background:rgba(94, 252, 141, .15);
-    color:var(--tertiary-green);
-    padding:10px;
-    border-radius:10px;
+.formResponseMessage{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+}
+.formResponseMessage > span{
+    text-align:center;
 }
 
 .successMessage{
     background:rgba(94, 252, 141, .15);
     color:var(--tertiary-green);
-    padding:10px;
+    margin:0 10px;
+    padding:15px 20px;
     border-radius:10px;
 }
 
