--- a/public/assets/css/hello.css
+++ b/public/assets/css/hello.css
@@ -58,11 +58,12 @@
         align-items: center;
         gap:50px;
     }
-    #helloSection .halfSection:first-child{
+    #helloSection > .halfSection:first-child{
         order:2;
     }
-    #helloSection .halfSection:nth-child(2){
+    #helloSection > .halfSection:nth-child(2){
         order:1;
+        height:max(35vh, 35vw);
     }
     #helloTextSection{
         position:relative;
@@ -77,7 +78,7 @@
     #helloButtonSection{
         flex-wrap:wrap;
     }
-    #portraitBorder{
+    #helloSection .halfSection:nth-child(2){
         display:none;
     }
 }
