--- a/public/assets/css/master.css
+++ b/public/assets/css/master.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400&display=swap');
 
 :root{
-    --accent:#0079C7;
+    --accent:#4DB8FF;
     --tertiary-green:#5EFC8D;
     --tertiary-pink:#D370DB;
     --gray:#777;
